--- a/first.html
+++ b/first.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Testando Elementos Semanticos</h1>
-    <p>Alan <mark>Santos</mark> de Sousa</p>
+    <p>Alan <code>Santos</code> de Sousa</p>
     <p>Meu nascimento foi em <time>1992 10 31</time>, na cidade de Açailândia.</p>
     
 </body>
