--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<section id="header">
 			<header>
-				<h1><img src="images/sublimeText.png" alt="Logo text editor" width="50px" height="50px">&nbsp;Alan Web Developer</h1>
+				<h1 style="text-align: center;"><img src="images/sublimeText.png" alt="Logo text editor" width="50px" height="50px">&nbsp;Alan Web Developer</h1>
 			</header>			
 		</section>
 		<hr>
