--- a/cap5/topo-do-site-do-paulo-2.html
+++ b/cap5/topo-do-site-do-paulo-2.html
@@ -54,7 +54,8 @@
 			}
 
 			nav > ul > li:nth-child(3) {
-				background: #ccc;
+				background: pink;
+                text-decoration: none;
 			}
 
 			
@@ -76,7 +77,6 @@
 					<li><a href="artigos-html.html">artigos HTML</a></li>
 					<li><a href="artigos-css.html">artigos CSS</a></li>
 					<li><a href="contato.html">contato</a></li>
-					<div class="clear"></div><!--Limpa floats-->
 				</ul>
 			</nav>
 			
