--- a/cap5/topo-do-site-do-paulo-3a-bckp.html
+++ b/cap5/topo-do-site-do-paulo-3a-bckp.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Criação de sites com HTML e CSS | Paulo Silva</title>
-        <link rel="stylesheet" type="text/css" href="normalize.css"></link> <!-- CSS Reset de Nicolas Gallagher -->
+		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<style type="text/css">
 			
 			html {
