--- a/cap5/topo-do-site-do-paulo-3c.html
+++ b/cap5/topo-do-site-do-paulo-3c.html
@@ -29,13 +29,59 @@
 
 			.topo {
 				width: 100%;
+				line-height: 1;
+				padding: 1px 20px 10px;
 			}
 
 			.topo h1 {
 				font-size: 36px;
+				margin: 4px 0 2px 0;
+				text-align: right;
 			}
+
+			.topo a {
+				color: #900;
+				text-decoration: none;
+			}
+
 			.topo h2 {
-				font-size: 27px;
+				font-size: 20px;
+				margin: 2px 0 4px;
+				text-align: right;
+			}
+
+			nav > ul {
+				width: 100%;
+				background: #900;
+				margin: 0;
+				padding: 0;
+			}
+
+			.topo ul li {
+				list-style: none;
+				display: inline;
+			}
+
+			.topo ul li a {
+				float: left;
+				text-decoration: none;
+				text-transform: uppercase;
+				text-align: center;
+				border-right: 1px solid #fff;
+				padding: 10px 20px;
+				color: #fff;
+				background: #900;
+				font-size: 14px;
+				font-weight: bold;
+			}
+
+			.topo ul li:last-child a {
+				border: none;
+			}
+
+			.topo ul li a:hover {
+				color: #900;
+				background: #ccc;
 			}
 
 		</style>
