--- a/cap5/topo-do-site-do-paulo-3b.html
+++ b/cap5/topo-do-site-do-paulo-3b.html
@@ -29,13 +29,25 @@
 
 			.topo {
 				width: 100%;
+				line-height: 1;
+				padding: 1px 20px 10px;
 			}
 
 			.topo h1 {
 				font-size: 36px;
+				margin: 4px 0 2px 0;
+				text-align: right;
 			}
+
+			.topo a {
+				color: #900;
+				text-decoration: none;
+			}
+
 			.topo h2 {
-				font-size: 27px;
+				font-size: 20px;
+				margin: 2px 0 4px;
+				text-align: right;
 			}
 
 		</style>
