Site do paulo final; training ccs float and units;

--- a/cap5/topo-do-site-do-paulo-3a.html
+++ b/cap5/topo-do-site-do-paulo-3a.html
@@ -43,9 +43,9 @@
 	
 	<body class="home">
 
-		<div class="tudo">
+        <div class="tudo"><!-- Inicio Tudo -->
 
-			<header class="topo">
+            <header class="topo"><!-- Inicio topo -->
 				<hgroup>
 					<h1><a href="">Site do Paulo</a></h1>
 					<h2>Site destinado a divulgar o trabalho de Paulo Silva na criação de sites</h2>
@@ -62,14 +62,14 @@
 					</ul>
 				</nav>
 				
-			</header>
+            </header><!-- Fim topo -->
 
 			<!--Mais contéudo-->
 
 			<footer class="rodape">
 				<!-- contéudo do rodapé do site -->
 			</footer>
-		</div>
+        </div><!-- Fim Tudo -->
 
 	</body>
 </html>
