--- a/cap5/topo-do-site-do-paulo-3c.html
+++ b/cap5/topo-do-site-do-paulo-3c.html
@@ -46,9 +46,10 @@
 
 			.topo h2 {
 				font-size: 20px;
-				margin: 2px 0 4px;
+				margin: 2px 0 4px 0;
 				text-align: right;
 			}
+
 
 			nav > ul {
 				width: 100%;
@@ -89,9 +90,9 @@
 	
 	<body class="home">
 
-		<div class="tudo">
+        <div class="tudo"><!-- Inicio tudo -->
 
-			<header class="topo">
+            <header class="topo"><!-- Inicio topo -->
 				<hgroup>
 					<h1><a href="">Site do Paulo</a></h1>
 					<h2>Site destinado a divulgar o trabalho de Paulo Silva na criação de sites</h2>
@@ -106,15 +107,15 @@
 						<li><a href="contato.html">contato</a></li>
 						<div class="clear"></div><!--Limpa floats-->
 					</ul>
-				</nav>
-				
-			</header>
+				</nav>				
+            </header><!-- Fim topo -->
 
 			<!--Mais contéudo-->
 
 			<footer class="rodape">
 				<!-- contéudo do rodapé do site -->
 			</footer>
-		</div>
+        </div><!-- Fim tudo -->
+
 	</body>
 </html>
