--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -2,6 +2,10 @@
     <head>
         <meta charset="UTF-8">
         <style>
+            body {
+
+                margin: 0;
+            }
             .elemento-principal {
                 position: sticky;
                 /*left: 10px;
@@ -11,11 +15,6 @@
                 padding: 10px;
             }
 
-            /*
-            html {
-                height: 1000px;
-            }
-            */
 
             .elemento-pai {
                 position: relative;
