--- a/cap5/topo-do-site-do-paulo-2.html
+++ b/cap5/topo-do-site-do-paulo-2.html
@@ -14,6 +14,7 @@
 				font-size: 18px;
 				font-family: arial, sans-serif;
 				line-height: 1.2;
+                    background-color: lightgray;
 			}
 
 			hgroup > h1 {
