--- a/cap3/article_element.html
+++ b/cap3/article_element.html
@@ -12,16 +12,23 @@
 <body>
     <header>
         <hgroup>
-            <h1>&sectWecome&sect to the Future World of &quotHTML5&quot</h1>
+            <h1>&sect;Welcome&sect; to the Future World of &quotHTML5&quot</h1>
             <h2>Don't be scared it isn't that hard!</h2>
+            <blockquote><q>Não tenha medo, não é tão dificíl!</q></blockquote>
             <h2>&Delta;&Omega;</h2>
         </hgroup>
+
+        <nav>
+            <a href="#home">Home</a> |
+            <a href="#aboutme">About Me</a> |
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
     <section id="articleList">
         <h2>Ultimos Posts</h2>
 
         <article id="article3">
-            <h2>HTML5 Aqui Hoje!</h2>
+            <h2>HTML5 Article 3</h2>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -31,7 +38,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article> 
         
         <article id="article2">
-            <h2>HTML5 Aqui Hoje!</h2>
+            <h2>CSS Article 2</h2>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -41,7 +48,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article> 
         
         <article id="article1">
-            <h2>HTML5 Aqui Hoje!</h2>
+            <h2>JavScript Article 1</h2>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -52,6 +59,10 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
     <footer>
+        <address>
+            <p>alan santos de sousa</p>
+            <p>Email: <a href="mailto:alan.stark2@gmail.com">Mande um Email</a></p>
+        </address>
         <p>Este Blog falso não é real.</p>
     </footer>
 </body>
