--- a/cap3/elementos-link-e-listas.html
+++ b/cap3/elementos-link-e-listas.html
@@ -27,7 +27,7 @@
 			</ul>
 		</li>
 	</ul>
-	<h2><code>Elementos</code> dl, dt, dd (lista de definição)</h2>
+	<h2><code>Elementos</code> &#60;dl&#62;, &#60;dt&#62;, &#60;dd&#62; (lista de definição)</h2>
 	<dl>
 		<dt>Caracteristicas do prolduto</dt>
 		<dd>Mais opções de cores e tamanhos</dd>
