--- a/cap3/index.html
+++ b/cap3/index.html
@@ -9,15 +9,32 @@
 			body {
 				background-color: darkgoldenrod;
 			}
+
+			h1 {
+				text-align: center;
+			}
+
+			img {
+				width: 50px; 
+				height: 50px;
+			}
+
+			#header {
+				border-bottom: 1px solid;
+			}
+
+			footer {
+				border-top: 1px solid;
+				text-align: center;
+			}
 		</style>
 	</head>
 	<body>
 		<section id="header">
 			<header>
-				<h1 style="text-align: center;"><img src="images/sublimeText.png" alt="Logo text editor" width="50px" height="50px">&nbsp;Alan Web Developer</h1>
+				<h1><img src="/home/alan/Imagens/vim-logo.png" alt="Logo text editor">&nbsp;&#60;&#47;Alan Web Developer&#62;</h1>
 			</header>			
 		</section>
-		<hr>
 		<section id="nav">
 			<nav>
 				<ul>
@@ -54,8 +71,7 @@
 					</ul>						
 			</section>
 		</main>
-		<hr>
-		<footer style="text-align: center;">
+		<footer>
 			<p>Todos os direitos reservados &copy;</p>
 		</footer>		
 	</body>
