--- a/cap3/outros_elementos.html
+++ b/cap3/outros_elementos.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h1>Elementos da HTML</h1>
+	<h1 style="text-decoration: overline;">Elementos da HTML</h1>
 	<h2>Elementos B e STRONG (negrito e forte ênfase)</h2>
 	<p>Texto de um paragrafo com <b>palavra em negrito</b> marcada com elemento B</p>
 	<p>Texto de um paragrafo com <strong>palavra com forte ênfase</strong> marcada com elemento STRONG</p>
