--- a/css-float-property.html
+++ b/css-float-property.html
@@ -5,40 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <style type="text/css">
-        * {
+html {
+    box-sizing: border-box;
+}
+        *, *::before, *::after {
+            box-sizing: inherit;
+
+        /*
            margin: 0;
            padding: 0;
+        */
         }
         
         #pai {
-            background: pink;
-            margin: 10px;
-           /* border: 1px solid;*/
+            background: Darkgray;
+            margin-top: 10px;
+           border: 1px solid;
         }
         .box {
+           /* border: 1px solid;*/
+            margin: 5px;
+            text-align: center;
+            text-transform: uppercase;
+            padding: 50px; 
             width: 100px;
             height: 100px;
             background: green;
-            margin: 5px;
             float: left;
         }
 
        .clear {
-            clear: both;
+          clear: both;
         }
     </style>
 </head>
 <body>      
      <div id="pai">
-        <div  class="box"></div>
-        <div  class="box"></div>
-        <div  class="box"></div>
-        <div  class="box"></div>
+        <div  class="box">a</div>
+        <div  class="box">b</div>
+        <div  class="box">c</div>
+        <div  class="box">d</div>
         <div class="clear"></div>
+  <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>-->
+
     </div>   
     
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
-<!--tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,-->
 <!--quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
 <!--consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse-->
 <!--cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non-->
