--- a/css-float.html
+++ b/css-float.html
@@ -17,11 +17,14 @@
            border: 1px solid;
            background-color: #ff5733;
            margin: 10px;
+            text-align: center;
         }
 
         h2 ~ p {
            /* border: 1px solid;*/
            margin: 10px;
+            text-align: justify;
+                clear: both;
             
         }
 
@@ -35,14 +38,10 @@
         }
 
         img {
-            float: left;
+            float: right;
             margin: 20px;
         }
 
-       img:last-of-type {
-            float:right;
-        }
-                 
     </style>
 
 </head>
