--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
         .item1 {
             background-color: #508aa8;
-            position: sticky;
-            top: 25px;
+            position: fixed;
+            top: 0;
+            right: 0;
         }
 
         .item2 {
@@ -32,6 +33,7 @@
     </style>
 </head>
 <body>
+    <h1>Ola mundo de merda</h1>
     
     <div class="box">
         <div class="item1"></div>
