--- a/cap3/elemento_video.html
+++ b/cap3/elemento_video.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<h2 style="text-align: center;">Redirecionando para outra pagina usando PHP</h2><br>
-	<video controls style="border: 2px solid darkred;">
-		<source src="/home/alan/Redirecting to another page using PHP - how, why and best practices [OwmKRznMaO0].mp4" type="video/mp4">
+	<h2 style="text-align: center;">Plugin Fugitive Vim</h2><br>
+	<video controls>
+		<source src="/home/alan/Vídeos/fugitive_1_vim.ogv" type="video/ogg" preload>
 	</video>
 	
 </body>
