--- a/cap6/posicionamento-relativo.html
+++ b/cap6/posicionamento-relativo.html
@@ -5,12 +5,17 @@
         <title></title>
         <style>
             div {
-                    width: 170px;
-                    height: 40px;
+                    width: 300px;
+                    height: 60px;
                     border: 1px solid black;
+                    font-size: 20px;
+                        line-height: 60px;
+                            text-align: center;
+                    font-weight: bold;
             }
             
             div.dois {
+                    background-color: pink;
                     position: relative;
                     left: 60px;
                     top: 15px;
